--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -7,8 +7,9 @@
   margin-bottom: 1.5rem;
 }
 
-.app-header span:nth-of-type(1) {
+.app-header a:nth-of-type(1) {
   color: var(--primary-blue);
   font-weight: bold;
   font-size: 1.2rem;
+  text-decoration: none;
 }
