--- a/src/components/Episode/EpisodeList.module.css
+++ b/src/components/Episode/EpisodeList.module.css
@@ -1,13 +1,19 @@
 .container {
   background-color: #ffffff;
   border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 16px;
+  box-shadow: var(--app-box-shadow);
+  overflow-x: auto;
 }
 
 .table {
-  width: 100%;
   border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+.table a {
+  text-decoration: none;
+  color: var(--primary-blue);
 }
 
 .header {
