--- a/src/components/Episode/EpisodeCard.module.css
+++ b/src/components/Episode/EpisodeCard.module.css
@@ -3,6 +3,7 @@
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  height: fit-content;
 }
 
 .title {
