feat: episodepage component

--- a/src/pages/EpisodePage.module.css
+++ b/src/pages/EpisodePage.module.css
@@ -5,3 +5,10 @@
   gap: 100px;
   margin: 0 auto;
 }
+
+@media (width <= 425px) {
+  .episode-page {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
