--- a/src/components/podcast/PodcastDetailCard.module.css
+++ b/src/components/podcast/PodcastDetailCard.module.css
@@ -31,6 +31,11 @@ h3 {
   padding: 30px 10px;
 }
 
+.podcast-card__title > a {
+  text-decoration: none;
+  color: black;
+}
+
 .podcast-card__description {
   padding: 0 20px 20px 20px;
 }
